<resources>
    <string name="app_name">Examen2</string>
    <string name="app_logo">Logo de la aplicación</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="login_subtitle">Inicia sesión o regístrate para continuar</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="guest_access">Continuar como invitado</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="or">o</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="email">Correo Electrónico</string>
    <string name="full_name">Nombre Completo</string>
    <string name="address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="password">Contraseña</string>
    <string name="user_role">Rol de Usuario:</string>
    <string name="normal">Normal</string>
    <string name="admin">Admin</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <string name="login_here">Inicia sesión aquí</string>
</resources>